{
  "app_title": "ANDE",
  "main_title": "ANDE",
  "ok": "OK",
  "set": "Set",
  "logout": "Logout",
  "anonymous": "Guest user",
  "username": "Username",
  "user_mail": "Email Address",
  "user_phone": "Phone number",
  "stay": "Stay",
  "cart_clear": "Please be advised that in case you leave this section cart will be cleared",
  "search_for_restaurant_hint": "Search For Restaurant",
  "scan_qr_code": "Scan QR Code",
  "scan_instruction": "Set the phone camera to\nthe QR code on the table",
  "choose_restaurant_button": "Choose the restaurant",
  "restaurants_title": "Find a Restaurant",
  "connection_error": "Kindly check your connection and try again",
  "egp": "EGP",
  "comments": "Comment(s)",
  "total_label": "Total",
  "service_label": "Service",
  "taxes_label": "Taxes",
  "confirm_button_label": "Confirm",
  "order_title": "Your order",
  "cart_title": "Your cart",
  "table_number": "Add num of the table",
  "table_num_label": "Table Number",
  "send": "Send",
  "use_qr_table_number_label": "Use QR Code on your table",
  "use_table_number_label": "Use Table Number instead",
  "rating_label": "Rating",
  "pay_button_label": "Pay",
  "active_orders": "My Active Order",
  "network_error": "Please Check your connection",
  "no_data_available": "No matches found",
  "sign_up_using": "Sign up with",
  "login_with_phone": "Sign up with Phone number",
  "invalid_phone": "Invalid Phone Number format",
  "verify_phone": "Verify",
  "empty_cart": "Please select items first before proceeding ",
  "ask_me_later": "Ask me later",
  "price_on_selection": "On selection",
  "customize_item": "Customize item",
  "starting_from": "Starting from",
  "sizes_label": "Size",
  "extras_label": "Extras",
  "options_label": "Options",
  "original_price": "Subtotal",
  "choose_size": "Please Choose meal size first before adding new one",
  "quantity_label": "Quantity",
  "delete_label": "Delete",
  "user_note_hint": "Add note",
  "voucher_code": "Enter voucher code",
  "voucher_label": "Enter Voucher code",
  "price_label": "Price",
  "call_waiter": "Call the waiter",
  "pay_label": "Pay",
  "payment_method": "Payment Method",
  "or": "OR",
  "optional": "Optional",
  "required_data": "Please Fill the items data first",
  "note_label": "Notes",
  "not_set_label": "Not set",
  "credit": "Credit card",
  "cash": "Cash",
  "max_limit": "Choose up to",
  "items_label": "item",
  "update_order": "Update order",
  "server_down": "unable to communicate with server",
  "restaurant_not_exist": "The restaurant not exist \r\n please contact the waiter to get new Code",
  "item_not_exist": "The Product doesn't not exist \r\n please contact the waiter",
  "back_from_payment": "Back to add new items",
  "something_wrong": "Something went wrong please restart the application \r\nif the error still there contact the admin",
  "waiter_coming": "Please wait the waiter is coming",
  "retry": "Retry",
  "empty_restaurant": "No Items available.",
  "restaurant_name": "Restaurant name",
  "camera_denied": "Please Grant Camera permission to use the application features",
  "description": "Description",
  "your_share": "Your Share",
  "others_items": "Your friends Items",
  "your_items": "Your Items",
  "order_closed_message": "Thank you for ordering ",
  "no_extras_label": "no extras",
  "sorry_message": "Sorry for inconvenience",
  "history": "History",
  "add_rate": "Add Rate",
  "english_locale": "English",
  "arabic_locale": "Arabic",
  "language": "Language",
  "app_name": "ANDE",
  "available_lang": "Restaurant Menu Available languages",
  "logout_with_active_order_error": "Please Close your active order first",
  "no_history": "No History Available",
  "order_no": "Order number",
  "order_details": "Order details",
  "payment_screen": "Payment",
  "edit": "Edit",
  "save": "Save",
  "save_changes": "Please confirm your changes first before proceeding",
  "invalid_code": "Invalid verification code provided",
  "verification_code_hint": "Verification code",
  "sr": "Ryal",
  "DELIVERY_TAB": "Delivery",
  "DINING_TAB": "Dining",
  "SERVER_UNREACHABLE": "Unable to communicate with server , please try again",
  "CHOOSE_COUNTRY": "Select your country",
  "COUNTRY_LABEL": "Your Location",
  "YOUR_NAME": "Your name",
  "YOUR_ADDRESS": "Your address",
  "ADD_YOUR_ADDRESS": "Add your address",
  "ADD_NEW_ADDRESS": "Add new one",
  "DELIVERY_NOTE": "Delivery notes",
  "STREET": "Street",
  "BUILDING": "Building",
  "FLOOR": "Floor Number",
  "FLAT": "Flat Number",
  "ADDITIONAL": "Additional directions",
  "PENDING": "Pending",
  "CONFIRMED": "Confirmed",
  "CANCELLED": "Canceled",
  "ON_ITS_WAY": "On its way",
  "TO_BE_DEFINED": "To be defined",
  "DELIVERED": "Delivered",
  "CURRENT_STATUS_HINT_TEXT": "The order is now processed",
  "ORDER_STATUS": "Order Status",
  "CANCEL_THE_ORDER": "CANCEL THE ORDER",
  "YOUR_REQUESTS": "Your requests",
  "YOUR_ACTIVE_ORDER_TITLE": "Your active order",
  "YOUR_ORDER_NUM": "Order num:",

  "SELECT_REGION": "Choose your area",
  "SELECT_CITY": "Choose your government",
  "RESTAURANT_SUPPORTED_REGIONS": "We are delivering to",
  "ENTER_YOUR_LOCATION": "Enter your location",
  "EDIT_MUST_BE_SAVED": "Please make sure to press save after your edits to be applied",
  "REQUIRED_LABEL": "Required field",
  "NO_ADDRESSES_MATCH": "Delivery service doesn't reach any of your registered addresses please add new one",
  "CHECKOUT_SCREEN_TITLE": "Checkout",
  "SELECT_PAYMENT_METHOD": "Please select order payment method",
  "SELECT_DELIVERY_LOCATION": "Please select the delivery location",
  "LOGIN": "Login",
  "INVALID_AUTH_CODE": "Invalid verification code provided",
  "PHONE_NUMBER_IS_BLOCKED": "This Phone number has requested too many messages please try again in while",
  "INVALID_PHONE_NUMBER": "Invalid Phone number provided",
  "PRIVATE_FACEBOOK": "Your Facebook account is private , Please try again with different account",
  "TWITTER_LOGIN_ERROR": "We couldn't find your account please try again with different account , or login method",
  "PAYMENT_FAILED": "Something went wrong with transaction , please contact your card provider",
  "SUCCESS_PAYMENT": "Your Payment is being processed , Please wait for Waiter confirmation",
  "ONLINE_PAYMENT_SERVICE_UNAVAILABLE": "Sorry service currently not available , please try again later",
  "USER_LOGIN_ERROR": "An error occurred while logging, please try again later",
  "INVALID_TABLE_NUMBER": "Sorry , please request waiter to double check the table number",
  "PICK_UP_TAB": "Pick Up",
  "BOOKING_TAB": "Booking",
  "ADD_NOTE_TO_RESTAURANT": "Add note to restaurant",
  "ITEM_PRICE_LABEL": "Item Price",
  "REORDER_LABEL": "Re-order",
  "OTHER_ORDERS_LABEL": "Other Orders",
  "NONE_LABEL": "None",
  "APP_SUPPORTED_LANGUAGES": "Language",
  "COMING_SOON": "Coming soon",
  "CHANGE_LANGUAGE_WITH_ACTIVE_ORDER_ERROR": "Please Close your active order first",
  "CHANGE_COUNTRY_WITH_ACTIVE_ORDER_ERROR": "Please Close your active order first",
  "RESTAURANT_NO_DINE_IN": "This feature is not supported for this restaurant",
  "ONLY_CASH": "Currently, only cash is supported.",
  "OTHER_ADDRESSES_AVAILABLE": "You have other addresses, just not in this restaurant's area.",
  "TO_BE_DETERMINED" : "To Be Determined",
  "SELECT_AREA_FIRST": "Please select area first",
  "ADDRESS_ADDED_BUT_NOT_AVAILABLE": "Address is added but not available in this restaurant's area.",
  "EMPTY_PHONE_NUMBER": "Please enter a phone number",
  "PLEASE_PULL_TO_REFRESH": "Please pull to refresh",
  "NO_DELIVERY_REGIONS": "This restaurant has no delivery regions"
}