...
      ),
      body: BlocConsumer(
        builder: (context, state) {
          return ModalProgressHUD(
            progressIndicator: loadingFlare,
            inAsyncCall: state is UserLoadingState,
            child: SingleChildScrollView(key: Key('address widget'),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.stretch,
                children: <Widget>[
                  Container(
                    padding: EdgeInsets.symmetric(horizontal: screenPadding),
                    decoration: BoxDecoration(
...
                    child: Form(
                      key: _formKey,
                      child: Column(
                        children: <Widget>[
                          HelperWidget.verticalSpacer(heightVal: 20),
                          buildSection((LocalKeys.STREET).tr(), _streetController,
                              true, _streetNode, _buildingNode, key: Key('street')),
                          buildSection(
                              (LocalKeys.BUILDING).tr(),
                              _buildingController,
                              true,
                              _buildingNode,
                              _floorNode , key: Key('building')),
                          buildSection((LocalKeys.FLOOR).tr(), _floorController,
                              true, _floorNode, _flatNode,
                              number: true , key: Key('floor')),
                          buildSection((LocalKeys.FLAT).tr(), _flatController,
                              false, _flatNode, _additionalDirectionsNode , key: Key('flat')),
                          buildSection(
                              (LocalKeys.ADDITIONAL).tr(),
                              _additionalDirections,
                              false,
                              _additionalDirectionsNode,
                              null , key: Key('address')),
                        ],
                      ),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(8.0),
...
