...
              progressIndicator: loadingFlare,
              inAsyncCall: state is OrderCreateLoading || paymentMethodLoading,
              child: GestureDetector(
                onTap: (){
                  FocusScope.of(context).unfocus();
                },
                child: SingleChildScrollView(key: Key('checkout'),
                  physics: AlwaysScrollableScrollPhysics(),
                  child: Form(
                    key: _formKey,
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.stretch,
                      children: <Widget>[
...
                                  Text(
                                    '${(LocalKeys.YOUR_NAME).tr()}*',
                                    style: TextStyle(color: greyColor),
                                  ),
                                  SizedBox(
                                    height: 60,
                                    child: TextFormField(key: Key('name'),
                                      controller: _userName,
                                      decoration: InputDecoration(
                                        contentPadding: EdgeInsets.all(0),
                                        border: UnderlineInputBorder(
                                          borderSide: BorderSide(
                                            width: 1,
...
                            ),
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.symmetric(
                              horizontal: screenPadding - 8),
                          child: TextFormField( key: Key('note'),
                            maxLines: 3,
                            controller: _deliveryNotes,
                            decoration: InputDecoration(
                              filled: true,
                              fillColor: whiteColor,
                              enabledBorder: OutlineInputBorder(
...
                          minWidth: MediaQuery.of(context).size.width,
                          child: Padding(
                            padding: const EdgeInsets.symmetric(
                                horizontal: 10, vertical: 8),
                            child: ClipRRect(
                              borderRadius: BorderRadius.circular(8),
                              child: FlatButton(key: Key('confirm'),
                                padding: EdgeInsets.all(0),
                                onPressed: (){
                                  FocusScope.of(context).unfocus();
                                  _createOrder();
                                  return;
                                },
...

    return BlocProvider.value(
      value: BlocProvider.of<CreateOrderBloc>(context),
      child: DeliveryFooter(
        feesType: widget.restaurant.deliveryInformation.feesType,
        orderNetPrice: UserCart().calculateCart(),
        delivery: deliveryFees,
        region: null,
        restaurantService: widget.restaurant.restaurantTaxes,
        restaurantCurrency: widget.restaurant.restaurantCurrency.currencyName ?? '',
        showTotal: true,
        toBeDetermined: true,
        state: BlocProvider.of<CreateOrderBloc>(context).state,
...
