...

    List<Country> countries = List<Country>.generate(jsonList.length, (index) {
      Map<String, String> elem = Map<String, String>.from(jsonList[index]);
      if (widget.enabledCountries.isEmpty) {
        return Country(
            name: elem['en_short_name'],
            code: elem['alpha_2_code'],
            dialCode: elem['dial_code'],
            flagUri: 'assets/images/flags/${elem['alpha_2_code'].toLowerCase()}.png');
      } else if (widget.enabledCountries.contains(elem['alpha_2_code']) ||
          widget.enabledCountries.contains(elem['dial_code'])) {
        return Country(
            name: elem['en_short_name'],
...
          SizedBox(
            width: 10,
          ),
          Flexible(
              child: Container(

            child: TextField( key: Key('phone'),
              keyboardType: TextInputType.phone,
              controller: phoneTextController,
              decoration: decoration ??
                  InputDecoration(
                      hintText: hintText,
                      labelText: labelText,
...
